--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@ iframe.active {
 
 <body>
 
-<iframe id="pdfFrame" src="page1.pdf" class="active"></iframe>
+<iframe id="pdfFrame" src="1 new.pdf" class="active"></iframe>
 
 <script>
 const pdfs = [
-    "page1.pdf",
-    "page2.pdf",
-    "page3.pdf"
+    "1 new.pdf",
+    "2 with QR code.pdf",
+    "3 with QR code.pdf"
 ];
 
 let index = 0;
