--- a/index.html
+++ b/index.html
@@ -3,37 +3,33 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PDF Scroll Viewer</title>
+<title>Scroll Invitation</title>
 
 <style>
 html, body {
     margin: 0;
-    padding: 0;
     height: 100%;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
+    -webkit-overflow-scrolling: touch;
     background: #000;
 }
 
-/* Each page */
+/* Page */
 .section {
     height: 100vh;
     scroll-snap-align: start;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 20px;
+    box-sizing: border-box;
 }
 
-/* PDF iframe */
-iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-}
-
-/* Small gap between pages */
-.section:not(:last-child) {
-    margin-bottom: 20px;
+img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 </style>
 </head>
@@ -41,15 +37,15 @@ iframe {
 <body>
 
 <div class="section">
-    <iframe src="Binder1.pdf"></iframe>
+    <img src="page1.jpg" alt="Page 1">
 </div>
 
 <div class="section">
-    <iframe src="2 with QR code.pdf"></iframe>
+    <img src="page2.jpg" alt="Page 2">
 </div>
 
 <div class="section">
-    <iframe src="3 with QR code.pdf"></iframe>
+    <img src="page3.jpg" alt="Page 3">
 </div>
 
 </body>
