--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@ img {
 <body>
 
 <div class="section">
-    <img src="page1.jpg" alt="Page 1">
+    <img src="1.jpg" alt="Page 1">
 </div>
 
 <div class="section">
-    <img src="page2.jpg" alt="Page 2">
+    <img src="2 with QR code.jpg" alt="Page 2">
 </div>
 
 <div class="section">
-    <img src="page3.jpg" alt="Page 3">
+    <img src="3 with QR code.jpg" alt="Page 3">
 </div>
 
 </body>
