--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Scroll Invitation</title>
+<meta name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<title>Wedding Invitation</title>
 
 <style>
 html, body {
@@ -12,6 +13,7 @@ html, body {
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
     -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
     background: #000;
 }
 
@@ -19,34 +21,123 @@ html, body {
 .section {
     height: 100vh;
     scroll-snap-align: start;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-bottom: 20px;
     box-sizing: border-box;
+
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.8s ease, transform 0.8s ease;
 }
 
-img {
+/* Fade in */
+.section.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/* Image */
+.section img {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+}
+
+/* Button */
+.action-btn {
+    position: absolute;
+    bottom: 40px;
+    background: #ffffff;
+    color: #000;
+    padding: 14px 26px;
+    border-radius: 30px;
+    text-decoration: none;
+    font-weight: 600;
+    box-shadow: 0 4px 12px rgba(0,0,0,.3);
+}
+
+/* Tap hint */
+.hint {
+    position: fixed;
+    bottom: 15px;
+    width: 100%;
+    text-align: center;
+    color: #aaa;
+    font-size: 14px;
+    animation: fade 2s infinite;
+}
+
+@keyframes fade {
+    0% { opacity: .2; }
+    50% { opacity: 1; }
+    100% { opacity: .2; }
 }
 </style>
 </head>
 
 <body>
 
+<!-- Page 1 -->
 <div class="section">
-    <img src="1.jpg" alt="Page 1">
+    <img src="1.jpg" alt="Wedding Invitation">
 </div>
 
+<!-- Page 2 -->
 <div class="section">
-    <img src="2 with QR code.jpg" alt="Page 2">
+    <img src="2 with QR code.jpg" alt="Wedding Details">
+    <a class="action-btn"
+       href="https://maps.app.goo.gl/EfgGNUEsu3DdTE3JA"
+       target="_blank">
+       📅 View Schedule
+    </a>
 </div>
 
+<!-- Page 3 -->
 <div class="section">
-    <img src="3 with QR code.jpg" alt="Page 3">
+    <img src="3 with QR code.jpg" alt="Wedding Location">
+    <a class="action-btn"
+       href="https://maps.app.goo.gl/P3Aq7PpC1dUQxfzLA
+
+10.505778423486257, 76.2461940657615
+10.505533576240166, 76.24592643005653
+
+https://www.google.com/maps/dir/?api=1&destination=10.505533576240166,76.24592643005653&travelmode=driving
+"
+       target="_blank">
+       📍 Open in Maps
+    </a>
 </div>
+
+<div class="hint">Tap or Swipe ↑</div>
+
+<script>
+const sections = document.querySelectorAll('.section');
+
+/* Fade-in */
+const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+        if (entry.isIntersecting) {
+            entry.target.classList.add('active');
+        }
+    });
+}, { threshold: 0.6 });
+
+sections.forEach(section => observer.observe(section));
+
+/* Auto scroll on tap (ignore button taps) */
+sections.forEach((section, index) => {
+    section.addEventListener('click', (e) => {
+        if (e.target.tagName === 'A') return;
+
+        if (index < sections.length - 1) {
+            sections[index + 1].scrollIntoView({ behavior: 'smooth' });
+        }
+    });
+});
+</script>
 
 </body>
 </html>
