--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ html, body {
     <a class="action-btn"
        href="https://maps.app.goo.gl/EfgGNUEsu3DdTE3JA"
        target="_blank">
-       📅 View Schedule
+         📍 Open in Maps
     </a>
 </div>
 
@@ -99,12 +99,8 @@ html, body {
 <div class="section">
     <img src="3 with QR code.jpg" alt="Wedding Location">
     <a class="action-btn"
-       href="https://maps.app.goo.gl/P3Aq7PpC1dUQxfzLA
+       href="https://maps.app.goo.gl/P3Aq7PpC1dUQxfzLA"
 
-10.505778423486257, 76.2461940657615
-10.505533576240166, 76.24592643005653
-
-https://www.google.com/maps/dir/?api=1&destination=10.505533576240166,76.24592643005653&travelmode=driving
 "
        target="_blank">
        📍 Open in Maps
