--- a/index.html
+++ b/index.html
@@ -87,25 +87,46 @@ html, body {
 
 <!-- Page 2 -->
 <div class="section">
-    <img src="2 with QR code.jpg" alt="Wedding Details">
-    <a class="action-btn"
-       href="https://maps.app.goo.gl/EfgGNUEsu3DdTE3JA"
-       target="_blank">
-         📍 Open in Maps
+    <img src="2.jpg" alt="Wedding Location">
+
+    <!-- Clickable QR -->
+    <a href="https://maps.app.goo.gl/EfgGNUEsu3DdTE3JA"
+       target="_blank"
+       style="
+        position:absolute;
+        bottom:37.5%;
+        width:120px;
+        height:120px;
+       ">
+        <img src="Marth Mariyam Church.png"
+       /*alt="Open location in Google Maps"*/
+            /*style="width:100%;height:100%;border-radius:12px;"*/
+         style="width:100%;height:100%;" >
     </a>
 </div>
+
 
 <!-- Page 3 -->
 <div class="section">
-    <img src="3 with QR code.jpg" alt="Wedding Location">
-    <a class="action-btn"
-       href="https://maps.app.goo.gl/P3Aq7PpC1dUQxfzLA"
+    <img src="3.jpg" alt="Reception Location">
 
-"
-       target="_blank">
-       📍 Open in Maps
+    <!-- Clickable QR -->
+    <a href="https://maps.app.goo.gl/P3Aq7PpC1dUQxfzLA"
+       target="_blank"
+       style="
+        position:absolute;
+        bottom:37.5%;
+        width:120px;
+        height:120px;
+       ">
+        <img src="Chakolas Pavilion.png"
+            /*alt="Open location in Google Maps"*/
+             /*style="width:100%;height:100%;border-radius:12px;"*/
+          style="width:100%;height:100%;"
+          >
     </a>
 </div>
+
 
 <div class="hint">Tap or Swipe ↑</div>
 
@@ -137,3 +158,4 @@ sections.forEach((section, index) => {
 
 </body>
 </html>
+
