--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ html, body {
 <body>
 <a href="invitation.html" class="container">
     <img src="images/landing.png" alt="Wedding Invitation">
-    <img src="images/Landing QR.png" class="qr" alt="Tap to open invitation">
+    <img src="images/Landing QR code.png" class="qr" alt="Tap to open invitation">
 </a>
 </body>
 </html>
