--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@ html, body {
 /* QR overlay */
 .qr {
     position: absolute;
-    bottom: 18%;
+    top: 60%;
     left: 50%;
-    transform: translateX(-50%);
-    width: 140px;
+    transform: translate(-50%, -50%);
+    width: 56px; /* 40% of previous 140px */
 }
+
 </style>
 </head>
 
